AC_INIT(like, 0.0.1, neo20@hanmail.net)

AC_PROG_CC
AC_PROG_CPP

AC_CHECK_LIB([ c], [ memcpy])
AC_CHECK_LIB([ m], [ sin])

AC_CHECK_HEADERS([ fcntl.h stdlib.h string.h sys/ioctl.h termios.h unistd.h] )
AC_HEADER_DIRENT

AC_TYPE_SIZE_T
AC_STRUCT_TM

AC_CHECK_FUNCS([ strchr strdup strstr] )
AC_FUNC_MALLOC

AC_CONFIG_FILES([ Makefile])
AC_OUTPUT

